--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         
-        <title> Millen Travel Co.</title>
+        <title> Millen Travel Agency</title>
         <link href="/src/style.css" rel="stylesheet" type="text/css"/>
         
         <!-- Favicon -->
@@ -23,9 +23,9 @@
             <!-- Hero -->
             <div class="hero">
                 <div class="hero-banner">
-                    <h1>Millen Travel Co.</h1>
-                    <h2>Your Gateway to the World</h2>
-                    <p>Vivamus aliquet neque ac libero mollis malesuada. Etiam eget volutpat enim. Nulla fermentum dui sed eros tristique, ut tempor leo bibendum. Suspendisse nec ornare arcu.</p>
+                    <h1>Explore the World With Us</h1>
+                    <h2>Millen Travel Agency</h2>
+                    <p>Vivamus aliquet neque ac libero mollis malesuada. Etiam eget volutpat enim.</p>
                     <a href="#featured" class="btn btn-hero scroll-link">Explore Tours</a>
                 </div>
             </div> 
