--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       
       
 <!-- Featured Tours -->
-      <section id="featured">
+      <section id="featured" class="featured">
          <div class="layout-centered">
             <h2>Upcoming Tours</h2>
             <div class="layout-flex-columns">
