--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- Navigation -->
       <nav id="navigation" class="navigation">
         <div class="layout-centered flex-layout-navigation">
-          <span class="site-logo"></span>
+          <span class="site-logo"><b>Millen</b> Travel Agency</span>
           <ul class="scroll-links">
             <li>
               <a href="#home">home</a>
@@ -207,7 +207,7 @@
     </section>
 
 <!-- Featured Tours -->
-    <section id="featured">
+    <section id="featured" class="featured">
       <div class="layout-centered">
         <h2>Upcoming Tours</h2>
         <div class="layout-flex-columns">
@@ -220,19 +220,21 @@
               <span>may 14, 2023</span>
             </div>
             <div class="card-lower">
-              <h3>Explore the Kumbhalgarh Fortress of India</h3>
+              <h3>Kumbhalgarh Fortress of India</h3>
               <p>
                 Nam pretium pulvinar consectetur. Donec eu odio aliquet,
                 porttitor metus vitae, rhoncus elit. Vestibulum tempor felis et
-                leo finibus scelerisque. Duis tincidunt ullamcorper augue eget
-                mollis. Mauris at maximus nisi, a dictum risus.
+                leo finibus scelerisque.
               </p>
             </div>
             <div class="card-footer">
-              <span class="fas fa-earth-asia"></span>
-              <h4>India</h4>
-              <span>8 days</span>
-              <span>From $2200</span>
+               <div class="layout-flex-columns">
+                  <p><span 
+                  class="fas fa-earth-asia"
+                  aria-hidden="true"></span>India</p>
+                  <p>8 days</p>
+                  <p>From $2200</p>
+               </div>
             </div>
           </article>
 
@@ -245,19 +247,22 @@
               <span>may 23, 2023</span>
             </div>
             <div class="card-lower">
-              <h3>vacation at the Madinat Jmeirah Hotel of Dubai</h3>
+              <h3>Dubai's Madinat Jmeirah Hotel</h3>
               <p>
                 Morbi ante nisl, vestibulum ac faucibus in, sollicitudin ut ex.
                 Aenean sit amet lacus eu dui imperdiet pulvinar ut volutpat
-                diam. Etiam dapibus commodo felis convallis fringilla.
+                diam.
               </p>
-            </div>
-            <div class="card-footer">
-              <span class="fas fa-earth-africa"></span>
-              <h4>Dubai</h4>
-              <span>5 days</span>
-              <span>From $3400</span>
-            </div>
+              </div>
+              <div class="card-footer">
+                  <div class="layout-flex-columns">
+                     <p><span 
+                     class="fas fa-earth-africa"
+                     aria-hidden="true"></span>Dubai</p>
+                     <p>5 days</p>
+                     <p>From $3400</p>
+                  </div>
+              </div>
           </article>
 
           <article>
@@ -269,19 +274,21 @@
               <span>June 7, 2023</span>
             </div>
             <div class="card-lower">
-              <h3>Villages of Assos</h3>
+              <h3>Villages of Assos staycation</h3>
               <p>
                 Sed quis convallis nisi. Etiam maximus mattis enim et iaculis.
                 Aenean in ornare sem, in tincidunt nulla. Donec pretium purus
-                nec magna accumsan pretium. Pellentesque eget felis vitae tellus
-                pellentesque tempus
+                nec magna accumsan pretium.
               </p>
             </div>
             <div class="card-footer">
-              <span class="fas fa-earth-europe"></span>
-              <h4>Greece</h4>
-              <span>10 days</span>
-              <span>From $1900</span>
+               <div class="layout-flex-columns">
+                  <p><span 
+                  class="fas fa-earth-europe"
+                  aria-hidden="true"></span>Greece</p>
+                  <p>10 days</p>
+                  <p>From $1900</p>
+               </div>
             </div>
           </article>
 
@@ -294,7 +301,7 @@
               <span>July 12, 2023</span>
             </div>
             <div class="card-lower">
-              <h3>tirta gangga of bali</h3>
+              <h3> Visit tirta gangga of bali</h3>
               <p>
                 Vestibulum scelerisque maximus ultricies. Quisque sed ante
                 semper, tristique arcu in, dapibus lectus. Sed rutrum diam
@@ -302,10 +309,13 @@
               </p>
             </div>
             <div class="card-footer">
-              <span class="fas fa-earth-asia"></span>
-              <h4>Bali</h4>
-              <span>12 days</span>
-              <span>From $4300</span>
+               <div class="layout-flex-columns">
+                  <p><span 
+                  class="fas fa-earth-asia"
+                  aria-hidden="true"></span>Bali</p>
+                  <p>12 days</p>
+                  <p>From $4300</p>
+               </div>
             </div>
           </article>
 
@@ -322,14 +332,17 @@
               <p>
                 Fusce tristique nisi ac ipsum finibus, ac pharetra justo dictum.
                 Suspendisse vitae rhoncus felis. Duis vitae pharetra tellus.
-                Donec et ullamcorper quam, nec porttitor justo.
+                Donec et ullamcorper quam.
               </p>
             </div>
             <div class="card-footer">
-              <span class="fas fa-earth-asia"></span>
-              <h4>Tanzania</h4>
-              <span>15 days</span>
-              <span>From $5300</span>
+               <div class="layout-flex-columns">
+                  <p><span 
+                  class="fas fa-earth-asia"
+                  aria-hidden="true"></span>Tanzania</p>
+                  <p>15 days</p>
+                  <p>From $5300</p>
+               </div>
             </div>
           </article>
 
@@ -342,24 +355,29 @@
               <span>September 8, 2023</span>
             </div>
             <div class="card-lower">
-              <h3>tour the villages of Hallstatt Austria</h3>
+              <h3>Hallstatt Austria village tour</h3>
               <p>
                 Donec tristique condimentum ante, nec vehicula libero laoreet
                 at. Donec eget lacinia lorem. Sed nec magna vel neque
-                pellentesque malesuada non a lorem. Suspendisse eget ornare
-                sapien, at semper ante.
+                pellentesque malesuada non a lorem. 
               </p>
             </div>
             <div class="card-footer">
-              <span class="fas fa-earth-asia"></span>
-              <h4>Europe</h4>
-              <span>7 days</span>
-              <span>From $2600</span>
+               <div class="layout-flex-columns">
+                  <p><span 
+                  class="fas fa-earth-asia"
+                  aria-hidden="true"></span>Europe</p>
+                  <p>7 days</p>
+                  <p>From $2600</p>
+               </div>
             </div>
-          </article>
-        </div>
-      </div>
+          </article> <!-- end of flex layout -->
+        </div> 
+        <a href="#featured" class="btn">View All Tours</a>
+      </div> <!-- end of layout centered -->
     </section>
+
+
 
 <!-- Contact Section -->
     <section id="contact" class="contact">
@@ -370,7 +388,7 @@
         </article>
         <form>
           <input
-            action="https://formspree.io/f/mayvbkdz"
+            action="https://formspree.io/f/xnqwzywd" 
             method="POST"
             type="email"
             name="email address"
