--- a/index.html
+++ b/index.html
@@ -380,23 +380,18 @@
 
 
 <!-- Contact Section -->
-    <section id="contact" class="contact">
+    <section id="contact" class="newsletter">
       <div class="layout-centered layout-flex-columns">
         <article>
           <h3>Want latest tour info and updates?</h3>
           <p>Signup for our mailing list for news about upcoming tours!</p>
         </article>
-        <form>
-          <input
-            action="https://formspree.io/f/xnqwzywd" 
-            method="POST"
-            type="email"
-            name="email address"
-            class="form-control"
-            placeholder="youremail@emailservice.com"
+        <form class="newsletter-form">
+          <input class="newsletter-input" action="https://formspree.io/f/xnqwzywd" method="POST" 
+          type="email" name="email" placeholder="email@emailservice.com"
           />
 
-          <button type="submit" class="btn-submit">Submit</button>
+          <input class="newsletter-submit" type="submit" value="Subscribe"></input>
         </form>
       </div>
     </section>
@@ -458,7 +453,7 @@
 <!-- Footer -->
     <footer id="footer" class="footer">
       <div class="layout-centered">
-        <ul class="scroll-links">
+        <ul class="links">
           <li>
             <a href="#home">home</a>
           </li>
@@ -480,32 +475,24 @@
         </ul>
         <ul class="socials">
           <li>
-            <a
-              href="https://github.com/tayallendev"
-              target="_blank"
-              class="fab fa-html5"
-            ></a>
+            <a href="https://github.com/tayallendev" target="_blank">
+               <span class="fab fa-html5"></span>
+            </a>
           </li>
           <li>
-            <a
-              href="https://github.com/tayallendev"
-              target="_blank"
-              class="fab fa-css3-alt"
-            ></a>
+            <a href="https://github.com/tayallendev" target="_blank">
+               <span class="fab fa-css3-alt"></span>
+            </a>
           </li>
           <li>
-            <a
-              href="https://github.com/tayallendev"
-              target="_blank"
-              class="fab fa-js-square"
-            ></a>
+            <a href="https://github.com/tayallendev" target="_blank">
+               <span class="fab fa-js-square"></span>
+            </a>
           </li>
           <li>
-            <a
-              href="https://github.com/tayallendev"
-              target="_blank"
-              class="fab fa-github-square"
-            ></a>
+            <a href="https://github.com/tayallendev" target="_blank">
+               <span class="fab fa-github-square"></span>
+            </a>
           </li>
         </ul>
       </div>
